# net-serial-monitor

./: CMakeLists.txt  LICENSE  Readme.md  main.cpp
misc/: net-serial-monitor.desktop
scripts/: test_network.sh  test_serial.sh
